--- a/basicos/index.html
+++ b/basicos/index.html
@@ -8,6 +8,18 @@
     <script type="module" src="./src/main.js" defer></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <li class="items">ssss</li>
+      <li class="items">ffff</li>
+      <li class="items">wwww</li>
+      <li class="items">aaaa</li>
+      <li class="items">llll</li>
+
+      <p class="saludo">Bienvenido</p>
+      <p class="saludo">Hola</p>
+
+      <a id="github" href="https://github.com/elangelsp/dom_javascript" target="_blank"></a>
+    </div>
+    
   </body>
 </html>
